--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,15 @@
 buildscript {
 
     ext{
-        kotlin_version = '1.3.50'
-        koin_version = '1.0.2'
-        retrofit_version = '2.6.2'
-        materialVersion = '1.2.0-alpha04'
+        dagger_version = '2.25.2'
         glideVersion = '4.10.0'
+        koin_version = '1.0.2'
+        kotlin_version = '1.3.50'
+        materialVersion = '1.2.0-alpha04'
         nav_version = "2.2.0"
-
+        retrofit_version = '2.6.2'
+        room_version = '2.2.3'
+        workVersion = '2.1.0'
     }
 
     repositories {
